--- a/style.css
+++ b/style.css
@@ -8,11 +8,11 @@
     font-family: sans-serif;
 }
 
-#h1{
+h1{
     font-family: sans-serif;
     color: #1D8DB0;
-    font-size: 20px;
-    
+    font-size: 10px;
+
 }
 
 #nav {
