Links in paragraph

--- a/style.css
+++ b/style.css
@@ -55,6 +55,11 @@ img {
     text-decoration: none;
 }
 
+p a{
+    color: #1D8DB0;
+    text-decoration: none;
+}
+
 a:hover{
     text-decoration: underline;
 }
