--- a/style.css
+++ b/style.css
@@ -4,19 +4,23 @@
     background-color: lightgrey;
 }
 
-#h3{
-    font-family: sans-serif;
+h3 {
+    font-family: 'Lato', sans-serif;
+}
+
+select {
+    font-family: 'Lato', sans-serif;
 }
 
 h1{
-    font-family: sans-serif;
+    font-family: 'Lato', sans-serif;
     color: #1D8DB0;
     font-size: 20px;
 
 }
 
 h2{
-    font-family: sans-serif;
+    font-family: 'Lato', sans-serif;
     color: #00407A;
     font-size: 15px;
     float: center;
@@ -28,21 +32,12 @@ h2{
     background-color: #1D8DB0;
 }
 
-#info {
-    padding: 10px;
-    border: 10px auto;
-    float: center;
-    background-color: #f2f2f2;
-    margin: 15px;
-}
-
 #nav li {
     float: left;
     display: inline-block;
     font-style: normal;
-    font-variant: small-caps;
     color: white;
-    font-family: tahoma;
+    font-family: 'Lato', sans-serif;
     font-size: 20px;
     text-align: center;
     padding: 10px 1%;
@@ -50,10 +45,10 @@ h2{
 
 #nav ul {
     list-style-type: none;
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
     overflow: hidden;
-    text-align: left;
+    text-align: right;
 }
 
 #nav img {
@@ -83,6 +78,14 @@ a:active{
     text-decoration: underline;
 }
 
+#info {
+    padding: 10px;
+    border: 10px auto;
+    float: center;
+    background-color: #f2f2f2;
+    margin: 15px;
+}
+
 #students img {
     border-radius: 50%;
     border-color: #ffffd4d;
@@ -92,6 +95,8 @@ a:active{
     border-style: solid;
     float: left top;
     position: relative;
+    font-family: 'Lato', sans-serif;
+    font-size: 13px;
 }
 
 #students p{
@@ -104,23 +109,22 @@ a:active{
 }
 
 p {
-    font-family: tahoma;
+    font-family: 'Lato', sans-serif;
     font-size: 13px;
 }
 
 ol {
-    font-family: tahoma;
+    font-family: 'Lato', sans-serif;
     font-size: 13px;
 }
 
 ul {
-    font-family: tahoma;
+    font-family: 'Lato', sans-serif;
     font-size: 13px;
 }
 
-footer {
-   display: block;
-}
+
+
 
 /* this is where I try to position two text blocks for fakbar text to each other*/
 
@@ -148,13 +152,19 @@ div.pics {
     margin-right: auto
 }
 
-.footer {
-    bottom: 0;
-    color: #707070;
-    padding: 10px;
-    height: 6em;
-    left: 0;
-    position: fixed;
-    font-size: small;
-    width:100%;
+/* this is where we style the footer */
+footer {
+    padding: 0.75em;
+    color: black;
+    background-color: white;
+    clear: left;
+    text-align: center;
+}
+
+.copyright {
+    float: left;
+}
+
+.github {
+    float: right;
 }
