--- a/style.css
+++ b/style.css
@@ -3,11 +3,7 @@ body {
     padding: 0px;
 }
 
-#map {
-    width: 100%;
-    height: 400px;
-    background-color: lightgrey;
-}
+
 
 h3 {
     font-family: 'Lato', sans-serif;
@@ -31,6 +27,12 @@ h2{
     float: center;
 }
 
+/* dimensions of map */
+#map {
+    width: 100%;
+    height: 400px;
+    background-color: lightgrey;
+}
 /* this is where we make the nav bar */
 
 #nav {
@@ -147,7 +149,7 @@ ul {
     font-size: 13px;
 }
 
-/* this is where I try to position two text blocks for fakbar text to each other*/
+/* this is where we try to position two text blocks for fakbar text to each other*/
 
 /* this is where the pictures get styled, inspired by https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_slideshow */
 
