--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* https://css-tricks.com/snippets/css/a-guide-to-flexbox/ & https://css-tricks.com/snippets/css/complete-guide-grid/ */
+
 #overview {
     display: none;
 }
