cudi style finished & leuven page content removed

--- a/style.css
+++ b/style.css
@@ -241,7 +241,8 @@ footer {
     background-color: #52BDEC;
     box-shadow: 5px 5px #1D8DB0;
     padding: 1.5em;
-    margin: 30px;
+    margin: 40px;
+    margin-left: 38%;
     font-style: normal;
     color: white;
     font-family: 'Lato', sans-serif;
