--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /* https://css-tricks.com/snippets/css/a-guide-to-flexbox/ & https://css-tricks.com/snippets/css/complete-guide-grid/ */
 
-#overview {
+/*#overview {
     display: none;
-}
+}*/
 
 body {
     margin: 0px;
