--- a/style.css
+++ b/style.css
@@ -151,10 +151,9 @@ ul {
 
 #info {
     padding: 10px;
-    border: 10px auto;
     float: center;
     background-color: #f2f2f2;
-    margin: 110px 10px 10px;
+    margin: 110px 30px 20px;
 }
 
 #students img {
@@ -206,7 +205,9 @@ div.fakbarpics {
     margin-top: 83px;
 }
 
-
+div.cudipics {
+    margin-top: 30px;
+}
 
 
 /* footer */
@@ -239,7 +240,7 @@ footer {
 }
 
 .mid {
-    margin-top: 130px;
+    margin-top: 120px;
     width: 100%;
     display: flex;
     justify-content: space-around;
@@ -317,12 +318,12 @@ footer {
 
 #button_cudi {
     border-radius: 10px;
-    width: 20%;
+    width: 50%;
     background-color: #52BDEC;
     box-shadow: 5px 5px #1D8DB0;
     padding: 1.5em;
-    margin: 40px;
-    margin-left: 38%;
+    margin: 30px;
+    margin-left: 18%;
     font-style: normal;
     color: white;
     font-family: 'Lato', sans-serif;
