--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ ul {
     width: 100%;
     height: 400px;
     background-color: lightgrey;
+    margin-bottom: 10px;
 }
 
 
@@ -126,6 +127,20 @@ ul {
 }
 
 /* home page */
+
+#box {
+    width: 30%;
+    margin-top: 120px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    background: #f2f2f2;
+    padding-top: 10px;
+    padding-left: 20px;
+    padding-bottom: 10px;
+    position: relative;
+}
+
 
 #faculties_humanities{
     display:none;
