--- a/style.css
+++ b/style.css
@@ -128,7 +128,30 @@ ul {
 
 /* home page */
 
-#box {
+.box {
+    margin-top: 120px;
+    margin-bottom: 30px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    text-align: justify;
+}
+
+#selectmenu {
+    width: 40%;
+    background: #f2f2f2;
+    padding: 0.75em;
+}
+
+#overview {
+    width: 40%;
+    background: #f2f2f2;
+    padding: 0.75em;
+}
+
+/*
+
+#selectmenu {
     width: 30%;
     margin-top: 120px;
     margin-left: 30px;
@@ -137,10 +160,22 @@ ul {
     background: #f2f2f2;
     padding-top: 10px;
     padding-left: 20px;
-    padding-bottom: 10px;
-    position: relative;
+    padding-bottom: 15px;
 }
 
+
+#overview {
+    width: 30%;
+    margin-top: 120px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    background: #f2f2f2;
+    padding-top: 10px;
+    padding-left: 20px;
+    padding-bottom: 15px;
+}
+*/
 
 #faculties_humanities{
     display:none;
